# chromium-binaries

./: .gitignore  README.md  cdk.json  chromium-version  package-lock.json  package.json
.github/: FUNDING.yml  dependabot.yml
.github/actions/clone-source/: action.yml
.github/workflows/: build-chromium.yml  deploy-runner.yml
assets/: args.gn  chrome_args.gn  gclient.txt  headless_shell_args.gn
assets/patches/clang/: disable-lld.patch  disable-sysroots-aarch64.patch  disable-sysroots-x86.patch  fix-xml2-and-zstd-lib-location.patch
assets/patches/dependencies/: disable-reclient-dep.patch  disable-sysroots-download.patch
assets/patches/rust/: bindgen-without-sysroot.patch  configure-clang-build.patch  dont-use-sysroot.patch  fix-version-check.patch  patch-build-process-arm64-al2.patch  patch-build-process-arm64-al2023.patch  patch-build-process-x86.patch  patch-build-process.patch  use-aarch64.patch  use-bfd-linker.patch  use-system-cmake.patch  use-system-openssl.patch
assets/patches/source/: fix-disable-speech-service.patch  fix-mdns-api.patch  fix-undefined-seals.patch  fix-v8-unused-function.v8-patch  ifunc-header-patch.patch  memory-tagging-not-supported.patch  revert-9251d8d4c0debee02298fef2c0fb6cf5e362edf4.patch
assets/patches/system/: update-v4l2-linux-headers.patch1
assets/patches/v8/: disable-pku-jit-write-protect.patch
fonts/: fonts.conf
lib/: chromium-builder-stack.ts  external-ecs.ts  trust-stack.ts
scripts/: bump-stable-version.sh  chrome.patch  headless_shell.patch  prepare-package.sh  test-patches.sh
test/: chromium-builder.test.ts
(+7 files in other folders)
