import("//build/args/headless.gn")

is_debug = false
dcheck_always_on = false
symbol_level = 0
blink_symbol_level=0
v8_symbol_level=0
is_official_build = true
disable_histogram_support = true
enable_media_remoting = true
chrome_pgo_phase = 0
enable_background_mode = false
use_sysroot = false
use_qt = false
enable_ppapi = false
enable_oop_printing = false
build_dawn_tests = false
dawn_enable_spirv_validation = false
enable_media_remoting_rpc = false
enable_rust_crash = false
use_crash_key_stubs = true
enable_gwp_asan = false
enable_gwp_asan_malloc = false
enable_gwp_asan_partitionalloc = false
enable_browser_speech_service = false
enable_component_updater = false
enable_reporting = false
enable_screen_ai_browsertests = false
enable_speech_service = false
enable_system_notifications = false
enable_trace_logging = false
disable_fieldtrial_testing_config = true
is_chrome_for_testing = true
build_with_tflite_lib = false
enable_hangout_services_extension = false
enable_mdns = false
enable_remoting = false
enable_reporting = false
enable_service_discovery = false
enable_widevine = true
safe_browsing_mode = 0
